<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_movie_detail_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/content_description_movie_poster"
                app:srcCompat="@drawable/ic_favorite"/>

            <TextView
                android:id="@+id/text_view_movie_title"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_movie_detail_poster"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                tools:text="Blockbuster!"/>

            <TextView
                android:id="@+id/label_movie_rating"
                style="@style/textLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_view_movie_title"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/ic_score"
                android:drawableStart="@drawable/ic_score"
                android:text="@string/label_rating"/>

            <TextView
                android:id="@+id/text_view_movie_rating"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/label_movie_rating"
                android:layout_alignStart="@+id/label_movie_rating"
                android:layout_below="@+id/label_movie_rating"
                tools:text="10/10"/>

            <TextView
                android:id="@+id/label_movie_release_date"
                style="@style/textLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text_view_movie_rating"
                android:layout_alignStart="@+id/text_view_movie_rating"
                android:layout_below="@+id/text_view_movie_rating"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_release_date"
                android:drawableStart="@drawable/ic_release_date"
                android:text="@string/label_release_date"/>

            <TextView
                android:id="@+id/text_view_movie_release_date"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/label_movie_release_date"
                android:layout_alignStart="@+id/label_movie_release_date"
                android:layout_below="@+id/label_movie_release_date"
                tools:text="24/12/2015"/>

            <TextView
                android:id="@+id/label_movie_synopsis"
                style="@style/textLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text_view_movie_release_date"
                android:layout_alignStart="@+id/text_view_movie_release_date"
                android:layout_below="@+id/text_view_movie_release_date"
                android:layout_marginTop="11dp"
                android:drawableLeft="@drawable/ic_synopsis"
                android:drawableStart="@drawable/ic_synopsis"
                android:text="@string/label_synopsis"/>

            <TextView
                android:id="@+id/text_view_movie_synopsis"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/label_movie_synopsis"
                android:layout_alignStart="@+id/label_movie_synopsis"
                android:layout_below="@+id/label_movie_synopsis"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:ellipsize="none"
                tools:text="One heck of a dandy handy movie!
                Michael Bay nails it on this one. KABOOM"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/label_movie_trailers"
            style="@style/textLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:drawableLeft="@drawable/ic_trailers"
            android:drawableStart="@drawable/ic_trailers"
            android:text="@string/label_trailers"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/label_movie_reviews"
            style="@style/textLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:drawableLeft="@drawable/ic_reviews"
            android:drawableStart="@drawable/ic_reviews"
            android:text="@string/label_reviews"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>